thanos/thanos/thanos-querier-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thanos-querier
  namespace: thanos-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thanos-querier
  template:
    metadata:
      labels:
        app: thanos-querier
    spec:
      containers:
      - image: quay.io/thanos/thanos:v0.23.1
        args:
          - query
          - --store=thanos-sidecar.thanos-test.svc.cluster.local:19090
          - --http-address=0.0.0.0:9090
        ports:
        - containerPort: 9090
          protocol: TCP
        livenessProbe:
          failureThreshold: 4
          httpGet:
            path: /-/healthy
            port: 9090
            scheme: HTTP
          periodSeconds: 30
        readinessProbe:
          failureThreshold: 20
          httpGet:
            path: /-/ready
            port: 9090
            scheme: HTTP
          periodSeconds: 5
        imagePullPolicy: IfNotPresent
        name: thanos-sidecar
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
