thanos/thanos/thanos-querier-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thanos-querier
  namespace: thanos-test
spec:
  ports:
  - name: http
    port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    app: thanos-querier
