thanos/thanos/thanos-sidecar-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thanos-sidecar
  namespace: thanos-test
spec:
  ports:
  - name: grpc
    port: 19090
    protocol: TCP
    targetPort: 19090
  - name: http
    port: 19191
    protocol: TCP
    targetPort: 19191
  selector:
    app: prometheus
