thanos/thanos/thanos-querier-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: thanos-querier
  namespace: thanos-test
spec:
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: thanos-querier
    weight: 100
  wildcardPolicy: None
